@@ -22,16 +22,23 @@ import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.schema.SchemaField;
+import org.apache.solr.util.TimeZoneUtils;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.HashSet;
+import java.util.TimeZone;
 
 
 public class SimpleFacetsTest extends SolrTestCaseJ4 {
+
+
   @BeforeClass
   public static void beforeClass() throws Exception {
     initCore("solrconfig.xml","schema.xml");
@@ -1026,6 +1033,100 @@ public class SimpleFacetsTest extends SolrTestCaseJ4 {
             ,meta+"/int[@name='after'  ][.='4']"
             ,meta+"/int[@name='between'][.='6']"
             );
+  }
+
+  @Test
+  public void testDateFacetsWithTz() {
+    for (String field : new String[] { "a_tdt", "a_pdt"}) {
+      for (boolean rangeType : new boolean[] { true, false }) {
+        helpTestDateFacetsWithTz(field, rangeType);
+      }
+    }
+  }
+
+  private void helpTestDateFacetsWithTz(final String fieldName,
+                                        final boolean rangeMode) {
+    final String p = rangeMode ? "facet.range" : "facet.date";
+    final String b = rangeMode ? "facet_ranges" : "facet_dates";
+    final String f = fieldName;
+    final String c = (rangeMode ? "/lst[@name='counts']" : "");
+    final String pre = "//lst[@name='"+b+"']/lst[@name='"+f+"']" + c;
+    final String meta = pre + (rangeMode ? "/../" : "");
+
+    final String TZ = "America/Los_Angeles";
+    assumeTrue("Test requires JVM to know about about TZ: " + TZ,
+               TimeZoneUtils.KNOWN_TIMEZONE_IDS.contains(TZ)); 
+
+    assertQ("checking facet counts for fixed now, using TZ: " + TZ,
+            req( "q", "*:*"
+                ,"rows", "0"
+                ,"facet", "true"
+                ,"NOW", "205078333000" // 1976-07-01T14:12:13.000Z
+                ,"TZ", TZ
+                ,p, f
+                ,p+".start", "NOW/MONTH"
+                ,p+".end",   "NOW/MONTH+15DAYS"
+                ,p+".gap",   "+1DAY"
+                ,p+".other", "all"
+                ,p+".include", "lower"
+                )
+            // 15 days + pre+post+inner = 18
+            ,"*[count("+pre+"/int)="+(rangeMode ? 15 : 18)+"]"
+            ,pre+"/int[@name='1976-07-01T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='1976-07-02T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='1976-07-03T07:00:00Z'][.='1'  ]"
+            ,pre+"/int[@name='1976-07-04T07:00:00Z'][.='1'  ]"
+            ,pre+"/int[@name='1976-07-05T07:00:00Z'][.='1'  ]"
+            ,pre+"/int[@name='1976-07-06T07:00:00Z'][.='1'  ]"
+            ,pre+"/int[@name='1976-07-07T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='1976-07-08T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='1976-07-09T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='1976-07-10T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='1976-07-11T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='1976-07-12T07:00:00Z'][.='1'  ]"
+            ,pre+"/int[@name='1976-07-13T07:00:00Z'][.='1'  ]"
+            ,pre+"/int[@name='1976-07-14T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='1976-07-15T07:00:00Z'][.='1'  ]"
+            //
+            ,meta+"/int[@name='before' ][.='2']"
+            ,meta+"/int[@name='after'  ][.='1']"
+            ,meta+"/int[@name='between'][.='7']"
+            );
+
+    // NOTE: the counts should all be zero, what we really care about
+    // is that the computed lower bounds take into account DST change
+    assertQ("checking facet counts arround DST change for TZ: " + TZ,
+            req( "q", "*:*"
+                ,"rows", "0"
+                ,"facet", "true"
+                ,"NOW", "1288606136000" // 2010-11-01T10:08:56.235Z
+                ,"TZ", TZ
+                ,p, f
+                ,p+".start", "NOW/MONTH"
+                ,p+".end",   "NOW/MONTH+15DAYS"
+                ,p+".gap",   "+1DAY"
+                ,p+".other", "all"
+                ,p+".include", "lower"
+                )
+            // 15 days + pre+post+inner = 18
+            ,"*[count("+pre+"/int)="+(rangeMode ? 15 : 18)+"]"
+            ,pre+"/int[@name='2010-11-01T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-02T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-03T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-04T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-05T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-06T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-07T07:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-08T08:00:00Z'][.='0']" // BOOM!
+            ,pre+"/int[@name='2010-11-09T08:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-10T08:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-11T08:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-12T08:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-13T08:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-14T08:00:00Z'][.='0']"
+            ,pre+"/int[@name='2010-11-15T08:00:00Z'][.='0']"
+            );
+    
   }
 
   @Test
